# Mint

./: .env.example  .gitignore  .npmignore  BUILD_AND_RELEASE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NPM_PUBLISH_GUIDE.md  README (Copy).md  README.md  RELEASE_NOTES.md  Release_Note.md  TAURI_MIGRATION.md  electron-vite.config.ts  index.html  install.ps1  install.sh  main.js  mint-chat-history.json  mint-cli-logic.js  mint-cli-logic.ts  mint-cli.js  mint-cli.ts  package-lock.json  package.json  preload-picker.js  preload-settings.js  preload.js  privacy.txt  rustc_checker.py  tech_news.txt  test_knowledge.txt  tsconfig.cli.json  tsconfig.json  tsconfig.node.json  tsconfig.ui.json  vite.config.ts  vite.config.web.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
cocking/: fried_chicken_recipe.txt  fried_chicken_recipe_en.txt
crates/mint-cli/: Cargo.toml
crates/mint-cli/src/: agent.rs  gmail.rs  image.rs  main.rs  mcp.rs  onboard.rs  setup.rs  skills.rs  updater.rs
crates/mint-core/: Cargo.toml
crates/mint-core/src/: agent_loop.rs  api_server.rs  browser.rs  channels.rs  chat.rs  code_tools.rs  config.rs  files.rs  image_gen.rs  knowledge.rs  lib.rs  mcp.rs  memory.rs  orchestration.rs  pictures.rs  plugins.rs  safety.rs  semantic.rs  shell.rs  skills.rs  symbols.rs  tasks.rs  tts.rs  weather.rs  web_search.rs  workflows.rs
crates/mint-core/tests/: mcp_stdio.rs  memory_persistence.rs  pictures_storage.rs  task_lifecycle.rs
docs/: WEBHOOK_FORWARDING.md  guide.html  index.html  style.css
flatpak/: com.pheem49.mint.desktop  com.pheem49.mint.metainfo.xml  com.pheem49.mint.yaml
hthh/: README.md  celebrate.css  celebrate.html  celebrate.js  index.html  script.js  styles.css
scratch/: dummy_server.js  list_models.js  test_mcp.js  test_os_info.js  test_rag_v2.js  test_system.js
scratch/rag_test_folder/: bio.txt  tech.md
scripts/: dev.js  install_linux_desktop_entry.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: browser.rs  channels.rs  desktop.rs  discord_rpc.rs  events.rs  headless.rs  integrations.rs  lib.rs  main.rs  pictures.rs  plugins.rs  proactive.rs  system.rs  updater.rs  weather.rs  webhooks.rs  workflows.rs
src/AI_Brain/: Gemini_API.js  Gemini_API.ts  agent_orchestrator.js  agent_orchestrator.ts  autonomous_brain.js  autonomous_brain.ts  behavior_memory.ts  headless_agent.js  headless_agent.ts  knowledge_base.js  knowledge_base.ts  memory_store.js  memory_store.ts  proactive_engine.js  proactive_engine.ts  provider_adapter.js  provider_adapter.ts
src/Automation_Layer/: browser_automation.js  browser_automation.ts  file_operations.js  file_operations.ts  open_app.js  open_app.ts  open_website.js  open_website.ts
src/CLI/: approval_handler.js  approval_handler.ts  chat_router.js  chat_router.ts  chat_ui.js  chat_ui.ts  cli_colors.js  cli_colors.ts  cli_formatters.js  cli_formatters.ts  code_agent.js  code_agent.ts  code_session_memory.js  code_session_memory.ts  gmail_auth.js  gmail_auth.ts  image_input.ts  inquirer.d.ts  intent_detectors.ts  interactive_chat.js  interactive_chat.ts  list_features.js  list_features.ts  onboarding.js  onboarding.ts  repo_summarizer.ts  semantic_code_search.ts  skill_manager.js  skill_manager.ts  slash_command_handler.js  slash_command_handler.ts  symbol_indexer.ts  updater.js  updater.ts  workspace_manager.js  workspace_manager.ts
src/Channels/: brave_search_bridge.ts  discord_bridge.js  discord_bridge.ts  google_search_bridge.js  google_search_bridge.ts  line_bridge.js  line_bridge.ts  slack_bridge.js  slack_bridge.ts  telegram_bridge.js  telegram_bridge.ts  whatsapp_bridge.js  whatsapp_bridge.ts
src/Command_Parser/: parser.js  parser.ts
src/Plugins/: dev_tools.ts  discord.ts  docker.ts  gmail.js  gmail.ts  google_calendar.js  google_calendar.ts  notion.ts  (+9 more)
tests/: action_executor_safety.test.js  agent_orchestrator.test.js  chat_provider_adapter.test.js  chat_router.test.js  chat_ui_format.test.js  code_agent.test.js  config_manager.test.js  docker.test.js  file_operations.test.js  gmail.test.js  gmail_auth.test.js  google_calendar.test.js  google_tts_urls.test.js  image_input.test.js  interactive_chat.test.js  ipc_approval_flow.test.js  memory_store.test.js  notion.test.js  provider_adapter.test.js  provider_routing.test.js  repo_summarizer.test.js  safety_manager.test.js  sandbox_runner.test.js  semantic_code_search.test.js  smart_context.test.js  spotify.test.js  symbol_indexer.test.js  system_monitor.test.js  task_manager.test.js  updater.test.js  workspace_manager.test.js
(+166 files in other folders)
