[workspace]
members = [
  "crates/mint-core",
  "crates/mint-cli",
  "src-tauri",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
