[workspace]
members = [
  "crates/mint-core",
  "crates/mint-cli",
  "src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.7.1"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "6"
futures-util = "0.3"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
quick-xml = "0.39"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
