[package]
name = "mint-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mint_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64.workspace = true
mint-core = { path = "../crates/mint-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
