[package]
name = "mint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mint"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
mint-core = { path = "../mint-core" }
serde_json.workspace = true
tokio.workspace = true
