[package]
name = "mint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mint"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
mint-core = { path = "../mint-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
crossterm = "0.28"
chrono = "0.4"
