[package]
name = "mint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
futures-util.workspace = true
quick-xml.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
