[package]
name = "mint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
futures-util.workspace = true
image.workspace = true
quick-xml.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
